[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytemuck = { version = "1.13.0", features = ["derive"] }
env_logger = "0.10.0"
image = { version = "0.24.5", features = ["png", "jpeg"] }
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.1"

[lib]
crate-type = ["cdylib", "rlib"]
